--- a/Week_11_web/Web-Design-Challenge/WebVisualizations/vis_cloudy.html
+++ b/Week_11_web/Web-Design-Challenge/WebVisualizations/vis_cloudy.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Web Weather Visualization Dashboard</title>
+    <title>Web Weather Visualization: Cloudiness</title>
     <link rel="stylesheet" href="../Resources/bootstrap/css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="../Resources/css/style.css" media="screen">
 
@@ -15,17 +15,17 @@
 
 <body>
     <nav class="navbar navbar-default">
-        <div class="container-fluid navbar-custom">
+        <div class="container-fluid w">
             <div class="row">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-div" aria-expanded="false">
-                <span class="sr-only">Toggle Navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
+                        <span class="sr-only">Toggle Navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <div class="col-xs-9 phone-nav">
-                        <a class="navbar-brand" href="../index.html" id="logo">Weather</a>
+                        <a class="navbar-brand a w" href="../index.html" id="logo">Weather Dashboard</a>
                     </div>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse-div">
@@ -33,10 +33,10 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="temp.html">Max Temperature</a></li>
-                                <li><a href="humidity.html">Humidity</a></li>
+                                <li><a href="vis_temps.html">Max Temperature</a></li>
+                                <li><a href="vis_humidity.html">Humidity</a></li>
                                 <li><a href="vis_cloudy.html">Cloudiness</a></li>
-                                <li><a href="wind.html">Wind Speed</a></li>
+                                <li><a href="vis_wind.html">Wind Speed</a></li>
                             </ul>
                         </li>
                         <li><a href="../comparison.html">Comparison</a></li>
@@ -51,23 +51,24 @@
         <section class="row">
             <div class="col-md-8">
                 <article class="description-content">
-                    <h1 class="description-header">Cloudiness</h1>
-                    <hr class="description-hr" />
-                    <img src="../assets/images/Fig3.png" alt="" class="img-responsive" />
+                <div>
+                    <h1 class="header">Cloudiness</h1>
+                    <hr/>
+                    <img src="../Resources/assets/images/Fig3.png" alt="Cloud Cover" id="description-image"/>
                     <p>The rain in Spain may fall mainly on the plain, but that doesn't tell you how cloudy it is or is expected to be... in fact latitude doesn't seem to coorelate with cloudiness, but there are several cities with similar cloudiness precentatges.</p>
+                </div>
                 </article>
             </div>
             <div class="col-md-4">
-
                 <section id="imageNav-area">
                     <div class="imageNav-content">
                         <h2 class="imageNav header">Weather Visualizations</h2>
                         <hr />
                         <div id="vis_images">
-                            <a href="temp.html"><img src="../assets/images/Fig1.png" alt="Latitude vs. Max Temperature" class="imageNav-photo"></a>
-                            <a href="humidity.html"><img src="../assets/images/Fig2.png" alt="Latitude vs. Humidity" class="imageNav-photo"></a>
-                            <a href="cloudiness.html"><img src="../assets/images/Fig3.png" alt="Latitude vs. Cloudiness" class="imageNav-photo active"></a>
-                            <a href="wind.html"><img src="../assets/images/Fig4.png" alt="Latitude vs. Wind Speed" class="imageNav-photo"></a>
+                            <a href="vis_temps.html"><img src="../Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" class="imageNav-photo"></a>
+                            <a href="vis_humidity.html"><img src="../Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" class="imageNav-photo"></a>
+                            <a href="vis_cloudy.html"><img src="../Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness" class="imageNav-photo active"></a>
+                            <a href="vis_wind.html"><img src="../Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed" class="imageNav-photo"></a>
                         </div>
                     </div>
                 </section>
@@ -75,13 +76,14 @@
         </section>
     </div>
 
-    <footer class="footer navbar-fixed-bottom">
-        <div class="two-toned-footer-color"></div>
-        <p class="text-muted text-muted-footer text-center">
-            &copy; Copyright Coding Bootcamp 2017
+    <footer class="footer">
+        <div class="footer-bar a"></div>
+        <p class="footer-text w">
+            &copy; Copyright, GWU Data Analytics Bootcamp, as interpreted by Krash
         </p>
     </footer>
-
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
 </html>
